update straight bootstrap code

--- a/emacs.org
+++ b/emacs.org
@@ -5,8 +5,11 @@ My emacs config
 * Bootstrapping
 ** Straight
 #+BEGIN_SRC emacs-lisp
-(let ((bootstrap-file (concat user-emacs-directory "straight/repos/straight.el/bootstrap.el"))
-      (bootstrap-version 3))
+(defvar bootstrap-version)
+(setq straight-repository-branch "develop")
+(let ((bootstrap-file
+       (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
+      (bootstrap-version 5))
   (unless (file-exists-p bootstrap-file)
     (with-current-buffer
         (url-retrieve-synchronously
