setup ibizaman.github.com as a forge repo
This particular repo is needed to separate work and personal
credentials in my ssh config and other places.

--- a/emacs.org
+++ b/emacs.org
@@ -1102,7 +1102,10 @@ With truncate-lines, do not split word
 
 (use-package forge
   :straight (forge :type git :host github :repo "magit/forge" :branch "master")
-  :after (magit transient))
+  :after (magit transient)
+  :config
+  (push '("ibizaman.github.com" "api.github.com" "github.com" forge-github-repository)
+        forge-alist))
 
 
 (defun ibizaman/magit-commit-create-WIP ()
